--- a/cfn.yml
+++ b/cfn.yml
@@ -225,19 +225,19 @@ Resources:
                     --output text
                 )
 
-                aws s3 cp s3://${SETTINGS_BUCKET}${PACKAGE_FILE} /tmp/bootstrap.tar.bz2
+                aws s3 cp s3://${SETTINGS_BUCKET}/${BOOTSTRAP_FILE} /tmp/bootstrap.tar.bz2
                 mkdir -p /opt/bootstrap
                 (
                   cd /opt/bootstrap
                   tar jxvf /tmp/bootstrap.tar.bz2
-                  chmod 755 run.sh
-                  chmod 755 bin/*
+                  chmod 755 run.sh &> /dev/null
+                  chmod 755 bin/* &> /dev/null
                 )
               path: /usr/local/bin/kickstart
               permissions: '0755'
           runcmd:
               - [ '/usr/local/bin/kickstart' ]
-              - [ '/opt/boostrap/run.sh' ]
+              - [ '/opt/bootstrap/run.sh' ]
 
   FTPImporterASG:
     Type: "AWS::AutoScaling::AutoScalingGroup"
