Deal with the sequence token

--- a/cfn.yml
+++ b/cfn.yml
@@ -240,6 +240,7 @@ Resources:
           #cloud-config
           packages:
             - wget
+            - lftp
           write_files:
             - content: |
                 #!/bin/bash
