--- a/cfn.yml
+++ b/cfn.yml
@@ -109,6 +109,7 @@ Resources:
                 Action:
                   - "logs:CreateLogGroup"
                   - "logs:CreateLogStream"
+                  - "logs:DescribeLogStreams"
                   - "logs:PutLogEvents"
                 Resource: "arn:aws:logs:*:*:*"
               -
