Scale down on insufficient data

--- a/cfn.yml
+++ b/cfn.yml
@@ -329,7 +329,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmActions:
+      InsufficientDataActions:
         - !Ref FTPImporterASGScaleDownPolicy
       AlarmDescription: Scale down the importers to save money
       AlarmName: "FTPImporterQueuedDownloadsProcessed"
